# asfassumption

./: .gitignore  BUILD_VERIFICATION_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXECUTIVE_RELEASE_REPORT.md  GUIDE.md  INGESTION_VALIDATION_REPORT.md  INSTALL.md  PROJECT_AUDIT_REPORT.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORTED_VERSIONS.md  asf.config.yaml  confidence_parity_analysis.py  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY_DISCLOSURE.md
asf/: __init__.py  analyzer.py  config.py  settings.py
asf-tui/: Makefile  about.go  ai.go  ai_test.go  analyze.go  analyze_cli.go  apd_test.go  app.go  baseline_test.go  benchmark_contradiction_semantic_test.go  benchmark_intelligence_test.go  benchmark_test.go  ciare_test.go  cie_test.go  cli.go  cmd_export.go  config.go  crypto.go  dashboard.go  doctor.go  engine.go  explain.go  explain_test.go  export.go  export_test.go  filebrowser.go  filepicker.go  go.mod  go.sum  help.go  ingestion_test.go  install.sh  justify.go  license.go  license_ed25519.go  localai.go  logger.go  main.go  model.go  parser.go  (+23 more)
benchmark/: __init__.py  cli.py  data.py  ground_truth.py  main.py  policies.py  runner.py
benchmarks/: ARCHIVE_VALIDATION.md  benchmark_history.md  benchmark_index.md  benchmark_timeline.md  evidence_matrix.md
docs/: AI_RISK_REFINEMENT_FIX_REPORT.md  ARCHITECTURE.md  ASF_PRODUCTION_STABILIZATION_FINAL_REPORT.md  ASSUMPTION_ENGINE_V3.md  ATTACK_PATH_DISCOVERY_ENGINE_CERTIFIED.md  BASELINE_ENGINE_BEHAVIOR.md  BENCHMARK_IMPROVEMENT_REPORT.md  (+109 more)
(+664 files in other folders)
